--- a/server/public/style.css
+++ b/server/public/style.css
@@ -4,12 +4,22 @@ body {
     font-family: 'Oswald', sans-serif;
   }
   
+  .content{
+    height: 50%;
+    background-color: white;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    height: 25%;
+    font-size: 7rem;
+  }
+
   .navigation {
     /* position: relative; */
     overflow: hidden;
     background-color: #000000;
     margin: 0, 0, 0, 0 ;
-    max-height: 20%;
+    height: 25%;
     text-align: center;
   }
   
@@ -25,17 +35,29 @@ body {
     padding: 0;
     margin: 0;
     text-align: center;
-    /* height: 20%; */
-    cursor: pointer;
+    height: 25%;
     font-size: 12rem;
     letter-spacing: 1.5rem;
   } 
 
   .sticky {
-    position: fixed;
-    margin-bottom: 0;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 25%;
+    width: 100%;
+  }
+
+.bottom {
+  color: white;
+  /* padding-bottom: 20px; */
+  background-color: black;
+}
+
+
+
+  margin-bottom: 0;
     margin-left: 0;
     margin-right: 0;
     margin-top: 25rem;
-    width: 100%;
-  }
